# stereohand

./: .gitignore  AGENTS.md  LICENSE  README.md  calib0.json  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: api.md  recentering-handoff.md
scripts/: calibrate.py  demo.py  setup.sh  stream_webcams.py  view_cameras.py
scripts/dev/: inspect_calib.py  preview_3d_panel.py  probe_camera_backend.py  repro_recenter_dropout.py
src/stereohand/: __init__.py  board.py  calibration.py  capture.py  landmarker.py  renderer.py  tracker.py  triangulation.py
tests/: test_board.py  test_calibration.py  test_capture.py  test_import.py  test_landmarker.py  test_renderer.py  test_stream_webcams.py  test_tracker.py  test_triangulation.py
