[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stereohand"
version = "0.1.0"
description = "Two webcams to metric 3D hand landmarks: ChArUco stereo calibration + MediaPipe Tasks + linear-DLT triangulation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Naveh Brenner", email = "navegerc@gmail.com" }]
keywords = ["hand-tracking", "mediapipe", "stereo", "triangulation", "3d-pose", "opencv"]
dependencies = [
    "numpy>=1.26",
    # opencv-contrib (not plain opencv-python): we need cv2.aruco for ChArUco.
    "opencv-contrib-python>=4.9",
    # Modern Tasks HandLandmarker API (not the legacy mediapipe.solutions.hands).
    "mediapipe>=0.10.35",
    # Emit a correctly-scaled printable PDF of the calibration board (cv2 can't).
    "pillow>=10",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8.0"]
demo = ["matplotlib>=3.8"]

[project.scripts]
stereohand-board = "stereohand.board:_cli"

[project.urls]
Homepage = "https://github.com/NavehBrenner/stereohand"
Issues = "https://github.com/NavehBrenner/stereohand/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stereohand"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
# Treat cv2 / mediapipe as untyped: their bundled stubs are too strict for the dynamic
# runtime API (overloaded signatures, optional out-params), so skip analyzing them.
[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "mediapipe", "mediapipe.*", "PIL", "PIL.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
