[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stereohand"
version = "0.1.0"
description = "Two webcams to metric 3D hand landmarks: ChArUco stereo calibration + MediaPipe Tasks + linear-DLT triangulation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Naveh Brenner", email = "navegerc@gmail.com" }]
keywords = ["hand-tracking", "mediapipe", "stereo", "triangulation", "3d-pose", "opencv"]
dependencies = [
    "numpy>=1.26",
    # opencv-contrib (not plain opencv-python): we need cv2.aruco for ChArUco.
    "opencv-contrib-python>=4.9",
    # Modern Tasks HandLandmarker API (not the legacy mediapipe.solutions.hands).
    "mediapipe>=0.10.35",
    # Emit a correctly-scaled printable PDF of the calibration board (cv2 can't).
    "pillow>=10",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10", "pytest>=8.0", "poethepoet>=0.24"]
demo = ["matplotlib>=3.8"]

[project.scripts]
stereohand-board = "stereohand.board:_cli"

[project.urls]
Homepage = "https://github.com/NavehBrenner/stereohand"
Issues = "https://github.com/NavehBrenner/stereohand/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stereohand"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"] # line length is handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["stereohand"]

[tool.ruff.format]
# Preview style (hugs sole bracketed args, etc). Matches the editor's
# format-on-save (`ruff.format.preview` in .vscode/settings.json) so save and
# `poe fmt`/CI agree instead of reverting each other.
preview = true

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
# Treat cv2 / mediapipe as untyped: their bundled stubs are too strict for the dynamic
# runtime API (overloaded signatures, optional out-params), so skip analyzing them.
[[tool.mypy.overrides]]
module = ["cv2", "cv2.*", "mediapipe", "mediapipe.*", "PIL", "PIL.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Project task runner (poethepoet) — `poe <task>`, same shape as kevin's.
# mypy/pytest go through `python -m` because this box's relocated .venv has stale
# console-script shebangs (ruff is a standalone binary, so it's called directly).
[tool.poe.tasks]
# Strip/sort imports (ruff check --fix, incl. the I rule) then format.
# `;` not `&&` so formatting still runs if check leaves an unfixable lint;
# `lint` and CI are the real gate.
fmt = { shell = "ruff check --fix src tests scripts; ruff format src tests scripts" }
fmt-check = "ruff format --check src tests scripts"  # non-mutating, for CI
lint = "ruff check --fix src tests scripts"
typecheck = "python -m mypy"
test = "python -m pytest -q"
check = ["lint", "typecheck", "test"]  # the full gate, same as CI
